@@ -15,6 +15,8 @@
 	4198,Maya_Purple_Card: intravision not working atm
 	4296,Cramp_Card: missing getzenybychance??
 
+08/27
+	* Updated const.txt with correct Taekwon-class job IDs [DracoRPG]
 08/25
 	* Updated slots in Sage's diary to 2. [Skotlex]
 	* Updated Mobs drops: Dancing Dragon, Civil Servant, Tao Gunka, Kraben by
